Fix navbar positioning and z-index for improved mobile layout

--- a/source-code/css/navbar.css
+++ b/source-code/css/navbar.css
@@ -174,6 +174,8 @@ width:calc(100% - 20px);
 flex-wrap:wrap;
 padding:0px 0px;
 gap:8px;
+position: fixed;
+z-index: 40;
     }
 
 .nav-middle{
@@ -194,7 +196,6 @@ gap:8px;
 /* Show hamburger on mobile */
 .hamburger {
     display: flex;
-    /* position: absolute; */
     margin-left: auto;
     top: 0px;
     margin-right: 16px;
